# Rubix-Smart-Contract-Examples

ERC-721/: main.go
ERC-721/erc_contract/: Cargo.toml
bidding-contract/: main.go
bidding-contract/bidding_contract/src/: lib.rs
bidding-contract/contract/: contractExecution.go
bidding-contract/erc_contract/src/: lib.rs
nft/: main.go  metadata.json
nft/contract/: contractExecution.go  runtime.go
nft/nft_contract/: Cargo.toml
nft/nft_contract/src/: lib.rs
