[package]
name = "nft_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = { version = "1.0.128", features = ["std"] }

